--- a/LanguageCourses/.env
+++ b/LanguageCourses/.env
@@ -2,10 +2,13 @@ ROOT_PATH=
 ENV=DEV
 LOG_LEVEL=DEBUG
 ORIGINS=*
-POSTGRES_SCHEMA=my_app_schema
+
+POSTGRES_SCHEMA=public
 POSTGRES_HOST=postgres
-POSTGRES_DB=postgres
+POSTGRES_DB=language_courses
 POSTGRES_PORT=5434
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_RECONNECT_INTERVAL_SEC=1
+
+PYTHONPATH=C:\Documents\LanguageCourses\src\project
