--- a/LanguageCourses/pyproject.toml
+++ b/LanguageCourses/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "documents"
+name = "project"
 version = "0.1.0"
 description = ""
 authors = ["Aleksandr Ivanov <Aleksandr200411y@.mail.ru>"]
@@ -8,12 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 sqlalchemy = "^2.0.35"
-fastapi = "^0.115.0"
+fastapi = "^0.115.4"
 pydantic-settings = "^2.5.2"
-uvicorn = "^0.30.6"
+uvicorn = "^0.32.0"
 asyncpg = "^0.29.0"
 greenlet = "^3.1.1"
 alembic = "^1.13.3"
+tenacity = "^9.0.0"
 
 
 [build-system]
